--- a/styles.css
+++ b/styles.css
@@ -83,7 +83,7 @@ body {
 footer {
   background-color: rgb(62, 61, 61);
   color: white;
-  padding: 30px 0;
+  padding-bottom: 30px;
   section {
     a {
       color: white;
