--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
   }
   header {
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-      url(/Maquette_exo1/img/lyon.webp);
+      url(/img/lyon_night.webp);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
